# python-training

./: pyproject.toml
notebooks/: 0_best_practices.ipynb
notebooks/tests/: test_mandelbrot_incorrect_test.py  test_mandelbrot_small.py  test_mandelbrot_zero_outside.py
